Table users {
  id bigserial [pk]
  name varchar [not null]
  email varchar [not null, unique]
  password varchar [not null]
  role varchar [not null, note: 'admin|user']
  created_at timestamp
  updated_at timestamp
}

Table resources {
  id bigserial [pk]
  title varchar [not null]
  type varchar [not null]
  description text
  capacity int
  is_active boolean [not null, default: true]
  attributes json
  created_at timestamp
  updated_at timestamp
}

Table bookings {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]
  resource_id bigint [not null, ref: > resources.id]
  start_at timestamp [not null]
  end_at timestamp [not null]
  status varchar [not null, note: 'booked|cancelled|completed']
  cancelled_by bigint [ref: > users.id]
  cancel_reason varchar
  created_at timestamp
  updated_at timestamp
}

Table reviews {
  id bigserial [pk]
  booking_id bigint [not null, unique, ref: > bookings.id]
  resource_id bigint [not null, ref: > resources.id]
  user_id bigint [not null, ref: > users.id]
  rating int [not null]
  comment text
  created_at timestamp
  updated_at timestamp
}


